; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/fpu/extr_xstate.c_get_xsave_field_ptr.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/fpu/extr_xstate.c_get_xsave_field_ptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.fpu }
%struct.fpu = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@current = common dso_local global %struct.TYPE_6__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_xsave_field_ptr(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.fpu*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** @current, align 8
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  store %struct.fpu* %6, %struct.fpu** %3, align 8
  %7 = load %struct.fpu*, %struct.fpu** %3, align 8
  %8 = call i32 @fpu__save(%struct.fpu* %7)
  %9 = load %struct.fpu*, %struct.fpu** %3, align 8
  %10 = getelementptr inbounds %struct.fpu, %struct.fpu* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = load i32, i32* %2, align 4
  %13 = call i8* @get_xsave_addr(i32* %11, i32 %12)
  ret i8* %13
}

declare dso_local i32 @fpu__save(%struct.fpu*) #1

declare dso_local i8* @get_xsave_addr(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
